namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-moic-prototype/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-moic-prototype
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/audit: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "manage-pom-cases"
    cloud-platform.justice.gov.uk/application: "Gov.UK Prototype Kit"
    cloud-platform.justice.gov.uk/owner: "Manage POM cases: platforms@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-moic-prototype"
    cloud-platform.justice.gov.uk/team-name: "hmpps-moic-prototype"
    cloud-platform.justice.gov.uk/review-after: ""
